fixed NotionModal z-index

--- a/src/components/NotionModal/NotionModal.css
+++ b/src/components/NotionModal/NotionModal.css
@@ -5,11 +5,11 @@
   bottom: 400px;
   left: 15px;
   border-radius: 2rem;
-  z-index: 100002;
+  z-index: 100000000000000000;
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(10px);
   transition: 0.15s linear;
-  opacity:0;
+  opacity: 0;
 }
 
 .notion-modal {
@@ -23,9 +23,8 @@
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(10px);
   transition: 0.15s linear;
-  opacity:1;
+  opacity: 1;
 }
-
 
 .notion-modal h3 {
   position: relative;
